crates/credential/tests/probes/capability_subtrait_revocable_no_method.stderr
error[E0046]: not all trait items implemented, missing: `revoke`
  --> tests/probes/capability_subtrait_revocable_no_method.rs:54:1
   |
54 | impl Revocable for Dummy {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^ missing `revoke` in implementation
   |
   = help: implement the missing item: `fn revoke(_: &mut <Self as Credential>::State, _: &CredentialContext) -> impl Future<Output = Result<(), CredentialError>> + Send { todo!() }`
